--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
           <div>
             <h3>Levi</h3>
             <p>
-              plagsom unge
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+               Molestiae nam, commodi cupiditate, ea voluptas aliquid,
+               id iusto temporibus quod facere accusantium assumenda fugit 
+              dolore? Nobis quos laborum repudiandae vel labore.
             </p>
           </div>
         </section>
@@ -31,7 +34,7 @@
         <section class="card" data-aos="fade-left">
           <img src="https://i.ibb.co/3NHjDcW/paint-2.png" alt="" />
           <div>
-            <h3>Acrylic Painting Two</h3>
+            <h3>2</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
               enim laudantium, animi veniam libero eveniet culpa unde perferendis
@@ -44,7 +47,7 @@
         <section class="card" data-aos="fade-right">
           <img src="https://i.ibb.co/0VywMkW/paint-3.png" alt="" />
           <div>
-            <h3>Acrylic Painting Three</h3>
+            <h3>3</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
               enim laudantium, animi veniam libero eveniet culpa unde perferendis
@@ -57,7 +60,7 @@
         <section class="card" data-aos="fade-left">
           <img src="https://i.ibb.co/5LkJFRP/paint-4.png" alt="" />
           <div>
-            <h3>Acrylic Painting Four</h3>
+            <h3>4</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
               enim laudantium, animi veniam libero eveniet culpa unde perferendis
@@ -70,7 +73,7 @@
         <section class="card" data-aos="fade-right">
           <img src="https://i.ibb.co/61R8Q2y/paint-5.png" alt="" />
           <div>
-            <h3>Acrylic Painting Five</h3>
+            <h3>5</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
               enim laudantium, animi veniam libero eveniet culpa unde perferendis
