--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
         </section>
       </main>
       <script src=https://unpkg.com/aos@2.3.0/dist/aos.js></script> 
-      <script src="script.js"></script>
+      <script src="scripts.js"></script>
 </body>
 </html>
