--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
       <main class="container">
         <section class="card" data-aos="fade-down">
-          <img src="Levi.png" alt="">
+          <img src="image/Levi.png" alt="">
           <div>
             <h3>Levi</h3>
             <p>
@@ -32,7 +32,7 @@
         </section>
   
         <section class="card" data-aos="fade-left">
-          <img src="https://i.ibb.co/3NHjDcW/paint-2.png" alt="" />
+          <img src="image/Kristian.jpg" alt="" />
           <div>
             <h3>2</h3>
             <p>
@@ -45,7 +45,7 @@
         </section>
   
         <section class="card" data-aos="fade-right">
-          <img src="https://i.ibb.co/0VywMkW/paint-3.png" alt="" />
+          <img src="image/Lars.jpg" alt="" />
           <div>
             <h3>3</h3>
             <p>
@@ -58,7 +58,7 @@
         </section>
   
         <section class="card" data-aos="fade-left">
-          <img src="https://i.ibb.co/5LkJFRP/paint-4.png" alt="" />
+          <img src="image/linus.jpg" alt="" />
           <div>
             <h3>4</h3>
             <p>
@@ -70,8 +70,8 @@
           </div>
         </section>
   
-        <section class="card" data-aos="fade-right">
-          <img src="https://i.ibb.co/61R8Q2y/paint-5.png" alt="" />
+        <section class="card" data-aos="fade-left">
+          <img src="image/simen.jpg" alt="" />
           <div>
             <h3>5</h3>
             <p>
@@ -82,8 +82,32 @@
             </p>
           </div>
         </section>
+        <section class="card" data-aos="fade-right">
+          <img src="image/casper.jpg" alt="" />
+          <div>
+            <h3>6</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
+              enim laudantium, animi veniam libero eveniet culpa unde perferendis
+              illo fugit corporis, voluptatibus totam dolorum, maiores magnam
+              officia. Ab, delectus.
+            </p>
+          </div>
+        </section>
+        <section class="card" data-aos="fade-left">
+          <img src="image/videl.png" alt="" />
+          <div>
+            <h3>7</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod error
+              enim laudantium, animi veniam libero eveniet culpa unde perferendis
+              illo fugit corporis, voluptatibus totam dolorum, maiores magnam
+              officia. Ab, delectus.
+            </p>
+          </div>
+        </section>
       </main>
-      <script src=https://unpkg.com/aos@2.3.0/dist/aos.js></script> 
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script> 
       <script src="scripts.js"></script>
 </body>
 </html>
