--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="main-header">
-        <h1><span>cool</span>people</h1>
+        <h1><span>Wari</span>kajo</h1>
         <p>
           
         </p>
@@ -18,7 +18,7 @@
   
       <main class="container">
         <section class="card" data-aos="fade-down">
-          <img src="image/Levi.png" alt="">
+          <img src="image/noor.jpg" alt="">
           <div>
             <h3>Levi</h3>
             <p>
@@ -28,7 +28,7 @@
         </section>
   
         <section class="card" data-aos="fade-left">
-          <img src="image/Kristian.jpg" alt="" />
+          <img src="image/ammi.jpg" alt="" />
           <div>
             <h3>2</h3>
             <p>
@@ -38,7 +38,7 @@
         </section>
   
         <section class="card" data-aos="fade-right">
-          <img src="image/Lars.jpg" alt="" />
+          <img src="image/trym.jpg" alt="" />
           <div>
             <h3>3</h3>
             <p>
@@ -48,7 +48,7 @@
         </section>
   
         <section class="card" data-aos="fade-left">
-          <img src="image/linus.jpg" alt="" />
+          <img src="image/jonas.jpg" alt="" />
           <div>
             <h3>4</h3>
             <p>
@@ -67,7 +67,7 @@
           </div>
         </section>
         <section class="card" data-aos="fade-right">
-          <img src="image/casper.jpg" alt="" />
+          <img src="image/abdi.jpg" alt="" />
           <div>
             <h3>6</h3>
             <p>
@@ -76,7 +76,7 @@
           </div>
         </section>
         <section class="card" data-aos="fade-left">
-          <img src="image/videl.png" alt="" />
+          <img src="image/ammi.jpg" alt="" />
           <div>
             <h3>7</h3>
             <p>
